<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sh_discovery</name>
    <version>0.0.0</version>
    <description>Fast-DDS Discovery Server utilities for the smart home.</description>
    <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
    <license>BSD</license>
    <author email="rnvandemark@gmail.com">R. Nick Vandemark</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>fastrtps</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
